# cpu_serving

./: .gitignore  AGENT.md  CPU_NOTES.md  README.md  REFACTOR.md  TODOs.md  pyproject.toml  requirements.txt  simple_test.sh  sitecustomize.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
artifacts/: benchmark_20251102T204709Z_tiny-test.json
envs/: requirements-hf.txt  requirements-llamacpp.txt  requirements-vllm.txt
scripts/: benchmark_hf.py  benchmark_llamacpp.py  benchmark_vllm.py  download_model.py  run_all_benchmarks.py  setup_virtualenvs.py
src/cpu_serving/: __init__.py  benchmarks.py  console.py  venv_manager.py  vllm_patches.py
tests/: test_quantized_benchmarks.py
