[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu-serving"
version = "0.1.0"
description = "Benchmark CPU-only inference stacks for Llama 3.1 models."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "CPU Serving Contributors" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
